--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react-native-get-location": "^1.4.2",
     "react-native-google-places-autocomplete": "^1.4.0",
     "react-native-maps": "git+https://git@github.com/react-native-community/react-native-maps.git",
+    "react-native-paystack-webview": "^2.0.3",
     "react-native-reanimated": "^1.6.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.25",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^8.1.2",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15",
     "react-redux": "^7.1.3",
