--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.6",
     "native-base": "^2.13.8",
     "react": "16.9.0",
+    "react-addons-update": "^15.6.2",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.3",
@@ -25,6 +26,7 @@
     "react-native-reanimated": "^1.6.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.25",
+    "react-native-sideswipe": "^1.5.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^8.1.2",
     "react-navigation": "^4.0.10",
