--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,19 +179,19 @@ android {
 }
 
 dependencies {
-    implementation project(':@react-native-community_geolocation')
     implementation project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
-    implementation(project(':react-native-maps')){
-                exclude group: 'com.google.android.gms', 
-                module: 'play-services-base'        
-                exclude group: 'com.google.android.gms', 
-                module: 'play-services-maps'    }
+    // implementation(project(':react-native-maps')){
+    //             exclude group: 'com.google.android.gms', 
+    //             module: 'play-services-base'        
+    //             exclude group: 'com.google.android.gms', 
+    //             module: 'play-services-maps'    }
     implementation 'com.google.android.gms:play-services-base:12.0.0'
     implementation 'com.google.android.gms:play-services-maps:12.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
