--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.6",
+    "material-auto-rotating-carousel": "^3.0.2",
+    "material-ui-dots": "^2.0.0",
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-addons-update": "^15.6.2",
+    "react-dom": "^16.13.0",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-get-location": "^1.4.2",
     "react-native-google-places-autocomplete": "^1.4.0",
-    "react-native-maps": "git+https://git@github.com/react-native-community/react-native-maps.git",
+    "react-native-maps": "^0.26.1",
     "react-native-paystack-webview": "^2.0.3",
     "react-native-reanimated": "^1.6.0",
     "react-native-safe-area-context": "^0.6.2",
@@ -32,6 +37,7 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15",
     "react-redux": "^7.1.3",
+    "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
