--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.6",
+    "jetifier": "^1.6.5",
     "material-auto-rotating-carousel": "^3.0.2",
     "material-ui-dots": "^2.0.0",
     "native-base": "^2.13.8",
@@ -26,6 +27,7 @@
     "react-native-gesture-handler": "^1.5.3",
     "react-native-get-location": "^1.4.2",
     "react-native-google-places-autocomplete": "^1.4.0",
+    "react-native-google-signin": "^2.1.1",
     "react-native-maps": "^0.26.1",
     "react-native-paystack-webview": "^2.0.3",
     "react-native-reanimated": "^1.6.0",
